[project]
name = "jeopardy-preperation-anki"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Max",email = "max.liao@gmail.com"},
]
dependencies = ["zstandard>=0.25.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.16",
    "black>=26.5.1",
]
[tool.pdm]
distribution = false
